<resources>
    <string name="app_name">ThirtyGame</string>
    <string name="rerollButtonDefault">Reroll</string>
    <string name="toggleDefault">0</string>
    <string name="rerollButtonEvaluate">Evaluate</string>
    <string name="returnButton">Return</string>
    <string name="scoreText">Score</string>
    <string name="setText">Set</string>
    <string name="titleText">Results</string>
    <string name="resultsButtonDefault">Results</string>
    <string name="totalText">Total:</string>
    <string name="highScoreText">HS: 0</string>
    <string name="ChoiceText">Choice</string>
    <string name="newGameButtonText">New Game</string>
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="spinner_description">Spinner</string>
    <string name="high_score_name_column">Name</string>
    <string name="name_hint">Your Name</string>
    <string-array name="scrollOptions">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>