<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/titleText"
        android:textSize="@dimen/ResultsTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="0, 2"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewRun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setText"
                android:textSize="@dimen/TableTitleTextSize"
                android:translationX="0dp" />

            <View
                android:id="@+id/View1"
                android:layout_width="2dip"
                android:layout_height="30dip"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/textViewScore"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/scoreText"
                android:textSize="@dimen/TableTitleTextSize"
                android:translationX="0dp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#000000" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/ElementTextSize"
                android:translationX="0dp" />

            <View
                android:id="@+id/View2"
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/ElementTextSize"
                android:translationX="0dp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#000000" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/totalText"
                android:textSize="@dimen/TableTitleTextSize" />

            <View
                android:id="@+id/View3"
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#000000" />

            <TextView
                android:id="@+id/textViewTotalScore"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/ElementTextSize"
                android:translationX="0dp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:layout_gravity="bottom"
            android:background="#000000" />

    </TableLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="@dimen/SmallButtonWidth"
        android:layout_height="@dimen/SmallButtonHeight"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/returnButton"
        android:textSize="@dimen/SmallButtonTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/highScoreText"
        android:textSize="@dimen/ElementTextSize"
        app:layout_constraintBottom_toTopOf="@+id/scoreLayout"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>