<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/scoreLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:stretchColumns="0, 2, 4"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/setText"
                    android:textSize="@dimen/TableTitleTextSize"
                    android:translationX="0dp" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="30dip"
                    android:background="#FFFFFF" />

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/scoreText"
                    android:textSize="@dimen/TableTitleTextSize"
                    android:translationX="0dp" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="30dip"
                    android:background="#FFFFFF" />

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/ChoiceText"
                    android:textSize="@dimen/TableTitleTextSize"
                    android:translationX="0dp" />

            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#000000" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewSets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ElementTextSize"
                    android:translationX="0dp" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textViewScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ElementTextSize"
                    android:translationX="0dp" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textViewChoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ElementTextSize"
                    android:translationX="0dp" />

            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#000000" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/totalText"
                    android:textSize="@dimen/TableTitleTextSize" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textViewTotalScore"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ElementTextSize"
                    android:translationX="0dp" />

                <View
                    android:layout_width="2dip"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ElementTextSize"
                    android:translationX="0dp" />

            </TableRow>

            <View
                android:layout_height="2dip"
                android:layout_gravity="bottom"
                android:background="#000000" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:orientation="vertical"

            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/SmallButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newGameButton"
                android:text="@string/newGameButtonText"

                android:layout_gravity="center">

            </Button>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>