<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"

                    android:background="@color/purple_500"
                    app:menu="@menu/main_menu"
                    app:title="@string/app_name">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <ToggleButton
                android:id="@+id/ToggleButton1"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

            <ToggleButton
                android:id="@+id/ToggleButton2"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

            <ToggleButton
                android:id="@+id/ToggleButton3"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

            <ToggleButton
                android:id="@+id/ToggleButton4"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

            <ToggleButton
                android:id="@+id/ToggleButton5"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

            <ToggleButton
                android:id="@+id/ToggleButton6"
                style="@style/ToggleButton"
                android:layout_columnWeight="1"/>

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Spinner"
                android:contentDescription="@string/spinner_description"
                android:layout_width="0dp"
                android:layout_height="48dp"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"

                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@id/RerollButton" />

            <Button
                android:id="@+id/RerollButton"
                style="@style/SmallButton"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"

                android:layout_marginBottom="8dp"
                android:text="@string/rerollButtonDefault" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>